--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "ci": "echo \"Error: No ci configured\""
   },
   "keywords": [],
-  "author": "khushman kaur",
+  "author": "Khushman kaur",
   "license": "ISC"
 }
