--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "COMP2156 lab exercise",
   "main": "index.js",
+  "homepage": "https://khushman99.github.io/GURKHUSHCOMP2156-LABS/",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "test": "echo \"Warning: No tests created yet.\"",
-    "eject": "react-scripts eject"
-  },
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
+      "test": "echo \"Warning: No tests created yet.\"",
+      "eject": "react-scripts eject"
+    },
+    
   "keywords": [],
   "author": "Khushman kaur",
   "license": "ISC",
@@ -23,16 +25,14 @@
     "travis": "^0.1.1",
     "yarn": "^1.13.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
+   
 }
